--- a/ars.ipynb
+++ b/ars.ipynb
@@ -8,7 +8,10 @@
     "\n",
     "This is from the paper: Simple random search provides a competitive approach to reinforcement learning. \n",
     "The link can be found [here](https://arxiv.org/pdf/1803.07055.pdf). \n",
-    "\n"
+    "\n",
+    "Performance: \n",
+    "\n",
+    "![image](images/ars-performance.png)\n"
    ]
   },
   {
@@ -93,15 +96,7 @@
     "    \n",
     "    def eval_policy(self, state, policy):\n",
     "        linear_output = np.dot(state, policy)\n",
-    "        probabilities = softmax(linear_output)\n",
-    "        if True in np.isnan(probabilities):\n",
-    "            print('linear output is')\n",
-    "            print(linear_output)\n",
-    "            print('state is')\n",
-    "            print(state)\n",
-    "            print('policy is')\n",
-    "            print(policy)\n",
-    "            \n",
+    "        probabilities = softmax(linear_output)            \n",
     "        action = np.random.choice(self.actions, p=probabilities)\n",
     "        return action\n",
     "    \n",
@@ -161,13 +156,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "ars = ARS(0.0003,10,0.01,3,4,2)\n",
+    "ars = ARS(0.00015,10,0.01,3,4,2)\n",
     "        \n",
-    "time_start = time.time()\n",
-    "\n",
     "episodes = 0 \n",
     "total_results = []\n",
     "while episodes < 1000:\n",
@@ -186,18 +181,24 @@
     "    results = np.subtract(results[0], results[1])\n",
     "    policy = ars.update_model(results)\n",
     "    episodes += 1 \n",
-    "print(\"Time elapsed: %s\"%(time.time()-time_start))\n",
-    "plot.plot(running_average(total_results), label = 'lr: %f, v: %f'%(i,j))\n",
-    "plot.legend()\n",
-    "plot.show()\n"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "plot.plot(total_results)\n",
+    "plot.plot(running_average(total_results))\n",
+    "plot.ylabel('Reward')\n",
+    "plot.xlabel('Episodes')\n",
+    "plot.title('Reward on CartPole')\n",
+    "plot.show()"
+   ]
   }
  ],
  "metadata": {
