--- a/reinforce.ipynb
+++ b/reinforce.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "This is a tensorflow implementation of reinforce as presented in RL: An Introduction. \n",
     "\n",
-    "![Image](reinforce_performance.png)"
+    "![Image](images/reinforce_performance.png)"
    ]
   },
   {
