--- a/reinforce.ipynb
+++ b/reinforce.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Reinforce with Baselines \n",
+    "### Reinforce \n",
     "\n",
     "This is a tensorflow implementation of reinforce as presented in RL: An Introduction. \n",
     "\n",
@@ -47,7 +47,9 @@
     "\n",
     "The init function includes the specification of the model parameters. Which is a network of size (4,24,24,2), where the activation units for the neurons are relu for the hidden layers and softmax for the output. The reason for using softmax as the output is because Reinforce wants to learn a probabilistic mapping of states to actions and softmax allows us to do this. \n",
     "\n",
-    "Note the loss that is specified for the loss is the catergorical cross entropy. Might seem weird, but mathematically it works out as the same as the policy gradient theorem when the action selected is represented by a one hot encoding of the actions. \n",
+    "The optimizer that is used is the AdamOptimizer, the reason being that it works. Once I know more about optimizers, I'll add more here. \n",
+    "\n",
+    "Note the loss that is specified for the loss is the catergorical cross entropy. Might seem weird, but mathematically it works out as the same as the policy gradient theorem when the action we took and want to update is represented as a one hot encoding. \n",
     "\n",
     "The reason for the negative return is because model.fit by default aims to minimize the loss. By changing the return to a negative value it trys to minimise a negative value, which is the same as the maximisation of a positive value. "
    ]
